Falta verificación W3 Resulta que me equivoqué y en el ultimo commit subi solo una imagen. Ahora si, todo lo que dije en el anterior va en este commit.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
         </div>    
     </main>
     <footer>
-        <p>footer de ejemplo</p>
+        <p>Yu-Gi-Oh es propiedad de Konami, todos los derechos reservados a sus respectivos dueños</p>
+        <p>Sitio web hecho para el curso de Node.js de Codo a Codo 4.0</p>
     </footer>
+    <!--Si tuvieras que hacer el trabajo entero solo... ¿desaprobarías?-->
+    <!--Nah, yo ganaré.-->
 </body>
 </html>
