--- a/pages/cartas.html
+++ b/pages/cartas.html
@@ -48,34 +48,73 @@
             </article>
         </article>
         <hr>
-        <article>
+        <article id="basics" class="justify-p">
             <h2>Aspectos Básicos</h2>
-            <h3>Deck/Mazo</h3>
-                <p>El Deck (también conocido como "baraja" en lanzamientos del JCC y "mazo" en videojuegos) es el conjunto de cartas. Es parte esencial del juego, ya que este contiene todas las Cartas Mágicas, Cartas de Trampa y la gran mayoría de Cartas de Monstruo exceptuando los Monstruos de Fusión, Monstruos de Sincronía y Monstruos XYZ (cartas que en cambio se sitúan en un Deck apartado llamado Deck Extra).
-                <br>Este cuenta con ciertas limitaciones, por ejemplo; dependiendo el modo de juego, solo se podrán llevar cierta cantidad de cartas. En el formato normal, cada jugador puede llevar de 40 a 60 cartas. Es importante recordar que la cantidad de cartas también es parte de la estrategia que uno desee utilizar.</p>
-            <h3>Cartas</h3>
-                <p>Una carta, obviamente, constituye un elemento fundamental para el juego de cartas. Representa un Monstruo, una Magia o una Trampa con las cuales se lleva a cabo un Duelo. Sólo pueden llevarse tres copias de la misma carta; aunque estas tengan ilustraciones diferentes, mientras compartan nombre, no se podrán utilizar más de 3. Algunas cartas tienen restricción, lo que limita la cantidad de cartas iguales que un jugador puede poseer: dos, una o ninguna (prohibidas e ilegales). La lista cambia periódicamente.
-                <br>
-                Veamos los tipos de Cartas que hay presentes en el juego:
-                </p>
-            <h3>Tipos de Cartas</h3>
-            <p>Cartas de Monstruo: Suelen ser de color naranja. Representan a los monstruos que un jugador puede Invocar y hacer batallar contra otros o directamente contra su adversario, cada carta de monstruo cuenta con una estadística de ATK (ataque) y DEF (defensa) que determina si ganará o no un enfrentamiento contra un monstruo rival.</p>
-            <p>Cartas de Magia: Son de color verde y pueden tener varios efectos que alteran un Duelo. Suelen tener efectos que benefician al controlador de la carta, o perjudican al adversario. Puedes usar tantas Cartas Mágicas como quieras por turno. En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</p>
-            <p>Cartas de Trampa: Son cartas de color púrpura que tienen varios efectos para hacerle difícil las cosas a tu adversario o más fáciles para ti durante un Duelo. Estas deben ser colocadas boca abajo en la Zona de Magia y Trampas (véase Cómo Jugar) y generalmente, solo pueden ser activadas después de que el turno donde fueron colocadas haya terminado.
-            </p>
+            <div class="c-i">
+                <div class="c-a">
+                <h3>Deck/Mazo</h3>
+                    <p>El Deck (también conocido como "baraja" en lanzamientos del JCC y "mazo" en videojuegos) es el conjunto de cartas. Es parte esencial del juego, ya que este contiene todas las Cartas Mágicas, Cartas de Trampa y la gran mayoría de Cartas de Monstruo exceptuando los Monstruos de Fusión, Monstruos de Sincronía y Monstruos XYZ (cartas que en cambio se sitúan en un Deck apartado llamado Deck Extra).
+                    <br>Este cuenta con ciertas limitaciones, por ejemplo; dependiendo el modo de juego, solo se podrán llevar cierta cantidad de cartas. En el formato normal, cada jugador puede llevar de 40 a 60 cartas. Es importante recordar que la cantidad de cartas también es parte de la estrategia que uno desee utilizar.</p>
+                </div>
+                <div class="c-b">
+                    <img class="responsive-img" src="../img/CARTAS/OSIRIS.png" alt="Foto de un Deck" id="osiris">
+                    <p class="caption">Ejemplo de un Deck</p>
+                </div>
+            </div>
+            <hr class="break">
+                <h3 style="text-align: justify;">Cartas</h3>
+                    <p>Una carta, obviamente, constituye un elemento fundamental para el juego de cartas. Representa un Monstruo, una Magia o una Trampa con las cuales se lleva a cabo un Duelo. Sólo pueden llevarse tres copias de la misma carta; aunque estas tengan ilustraciones diferentes, mientras compartan nombre, no se podrán utilizar más de 3. Algunas cartas tienen restricción, lo que limita la cantidad de cartas iguales que un jugador puede poseer: dos, una o ninguna (prohibidas e ilegales). La lista cambia periódicamente.
+                    <br>
+                    Veamos los tipos de Cartas que hay presentes en el juego:
+                    </p>
+                </div>
+            <div class="c-i">
+                <div class="c-a">
+                    <h3>Tipos de Cartas</h3>
+                        <h4>Cartas de Monstruo</h4>
+                        <p>Suelen ser de color naranja. Representan a los monstruos que un jugador puede Invocar y hacer batallar contra otros o directamente contra su adversario, cada carta de monstruo cuenta con una estadística de ATK (ataque) y DEF (defensa) que determina si ganará o no un enfrentamiento contra un monstruo rival. 
+                        <br>Un monstruo puede ser invocado normalmente, revelando su nombre, ataque, defensa y demás datos, o puede ser colocado boca abajo sobre el campo. Esto crea un factor de riesgo al atacar un monstruo boca abajo, pues dependiendo de su valor de DEF podrías recibir daño al atacarlo con tu monstruo.</p>
+                </div>
+                <div class="c-b">
+                    <img class="responsive-img" id="blueeyes" src="../img/CARTAS/BLUE EYES.jpg" alt="Ejemplo de Carta de Monstruo">
+                    <p class="caption">Ejemplo de una carta de monstruo, el Dragón Blanco de Ojos Azules</p>
+                </div>
+                <div class="c-a">
+                    <h4>Cartas de Magia</h4>
+                    <p>Son de color verde y pueden tener varios efectos que alteran un Duelo. Suelen tener efectos que benefician al controlador de la carta, o perjudican al adversario. Puedes usar tantas Cartas Mágicas como quieras por turno, siempre y cuando tengas espacio en tu Zona de Magia y Trampas (véase <a href="#reglamento">Cómo Jugar</a>). 
+                    <br>En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</p>
+                </div>
+                <div class="c-b">
+                    <img  class="responsive-img" src="../img/CARTAS/Icono Magia.png" alt="Ícono representativo de las cartas de Magia">
+                    <p class="caption">Ícono de las cartas mágicas</p>
+                </div>
+                <div class="c-a">
+                    <h4>Cartas de Trampa</h4>
+                    <p>Son cartas de color púrpura que tienen varios efectos para hacerle difícil las cosas a tu adversario o más fáciles para uno mismo durante un Duelo. Estas deben ser colocadas boca abajo en la Zona de Magia y Trampas (véase <a href="#reglamento">Cómo Jugar</a>) y generalmente, solo pueden ser activadas después de que el turno donde fueron colocadas haya terminado.</p>
+                </div>
+                <div class="c-b">
+                    <img class="responsive-img" src="../img/CARTAS/ICONO.png" alt="Ícono representativo de las cartas de Trampa">
+                    <p class="caption">Ícono de las cartas de trampa</p>
+                </div>
+                </div>
+            </div>
         </article>
+        <hr>
         <article id="reglamento">
             <h2>¿Cómo Jugar Yu-Gi-Oh?</h2>
-            <p>En un juego tan complejo y tan antiguo (aproximadamente 22 años) como lo es el TCG de Yu-Gi-Oh!, aprender a jugar puede parecer difícil. Pero Konami nos ha facilitado la tarea con sitios web orientados a princpiantes, como el sitio oficial de <a href="https://www.yugioh-card.com/lat-am/forbeginners/">YuGiOh para principiantes</a> y entregándonos un libro de reglas bastante competente y completo. Si quieres leer el reglamento haz click <a href="https://www.yugioh-card.com/lat-am/rulebook/">aquí</a> o en la imagen de la derecha.</p>
+            <p>En un juego tan complejo y tan antiguo (aproximadamente 22 años) como lo es el TCG de Yu-Gi-Oh!, aprender a jugar puede parecer difícil. Pero Konami nos ha facilitado la tarea con sitios web orientados a princpiantes, como el sitio oficial de <a href="https://www.yugioh-card.com/lat-am/forbeginners/">YuGiOh para principiantes</a> y entregándonos un libro de reglas bastante competente y completo. Si quieres leer el reglamento haz click <a href="https://www.yugioh-card.com/lat-am/rulebook/">aquí</a> o en la imagen correspondiente.</p>
             <h3>Sobre el Reglamento</h3>
-            <p>El reglamento de juego de cartas Yu-Gi-Oh! son una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
-            <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
-                En el caso de que el efecto de una carta entre en conflicto con alguna regla, el propio Reglamento dicta que el efecto de la carta tiene prioridad. El Yu-Gi-Oh! Trading Card Game es un juego muy dinámico y gran parte de su éxito se debe a esa cualidad, en la que existen efectos para "romper" sus propias reglas en beneficio del jugador.</p>
-            <img class="responsive-img" src="../img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
+            <div class="c-i">
+                <div class="c-a"><p>El reglamento de juego de cartas Yu-Gi-Oh! son una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
+                <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
+                En el caso de que el efecto de una carta entre en conflicto con alguna regla, el propio Reglamento dicta que el efecto de la carta tiene prioridad. El Yu-Gi-Oh! Trading Card Game es un juego muy dinámico y gran parte de su éxito se debe a esa cualidad, en la que existen efectos para "romper" sus propias reglas en beneficio del jugador.</p></div>
+                <div class="c-b"><a href="https://www.yugioh-card.com/lat-am/rulebook/"><img class="responsive-img" src="../img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh"></a></div>
+            </div>
         </article>   
     </main>
     <footer>
-        <p>footer de ejemplo</p>
+        <p>Yu-Gi-Oh es propiedad de Konami, todos los derechos reservados a sus respectivos dueños</p>
+        <p>Sitio web hecho para el curso de Node.js de Codo a Codo 4.0</p>
     </footer>
 </body>
 </html>
