--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -51,14 +51,15 @@
             <div class="c-b">
                 <h2>Yu-Gi-Oh! Master Duel</h2>
                 <p>Yu-Gi-Oh! Master Duel es un videojuego gratuito desarrollado y distribuido por el propietario de la franquicia, Konami. Este juego se encuentra disponible en diversas plataformas como Windows, Android e iOS, además de contar con versiones para las consolas de videojuegos modernas.<br>
-                El juego consiste en una simulación de los duelos con cartas en la vida real, siendo una versión mejorada de anteriores entregas de la saga. Los efectos visuales están diseñados de  manera similar al anime de Yu-Gi-Oh! y las mecánicas de jugabilidad y de los duelos son directamente exportadas del <a href="./cartas.html#reglamento">manual del uego</a>.</p>
+                El juego consiste en una simulación de los duelos con cartas en la vida real, siendo una versión mejorada de anteriores entregas de la saga. Los efectos visuales están diseñados de  manera similar al anime de Yu-Gi-Oh! y las mecánicas de jugabilidad y de los duelos son directamente exportadas del <a href="./cartas.html#reglamento">manual del juego</a>.</p>
                 <p>La propia Konami lo define como "la edición definitiva del competitivo juego de cartas que lleva más de 20 años evolucionando", y la comunidad parece estar de acuerdo que estaversión es muy competente al título de la más completa. Al contar con el formato original, permite que aquellos que no disfrutan del formato reducido de Duel Links tenan una alternativa para jugar de la manera que prefieran.</p>
                 <p>Este juego también cuenta con un sitio web oficial, al cual podes acceder haciendo click <a href="https://www.konami.com/yugioh/masterduel/us/es/">aquí</a> o en su respectivo logo.</p>
             </div>
         </article>
     </main>
     <footer>
-        <p>footer de ejemplo</p>
+        <p>Yu-Gi-Oh es propiedad de Konami, todos los derechos reservados a sus respectivos dueños</p>
+        <p>Sitio web hecho para el curso de Node.js de Codo a Codo 4.0</p>
     </footer>
 </body>
 </html>
