--- a/pages/anime.html
+++ b/pages/anime.html
@@ -110,7 +110,8 @@
         </section>
     </main>
     <footer>
-        <p>footer de ejemplo</p>
+        <p>Yu-Gi-Oh es propiedad de Konami, todos los derechos reservados a sus respectivos dueños</p>
+        <p>Sitio web hecho para el curso de Node.js de Codo a Codo 4.0</p>
     </footer>
 </body>
 </html>
