Finalizado el Proyecto Verificación W3 aprobada en todos los sitios, indica el final del desarrollo de este trabajo. Ha sido un placer y he crecido mucho como developer, y espero poder seguir mejorando para algún día rehacer este sitio como realmente lo tuve en mente hace tantos años.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="container">
             <h1>¡Bienvenido a Aprende YuGiOh!</h1>
             <section id="intro">
+                <h2>Introducción</h2>
                 <article class="c-i">
                     <div class="c-a">
                         <h2>¿Qué es YuGiOh?</h2>
