--- a/pages/anime.html
+++ b/pages/anime.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprende YuGiOh!</title>
+    <title>Anime | Aprende YuGiOh!</title>
     <link href="../styles.css" rel="stylesheet">
     <link rel="icon" href="../img/ico.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,9 +29,9 @@
     <main class="container">
             <h1>Los Anime de YuGiOh!</h1>
             <p>A lo largo de los años se realizaron diversas series animadas del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <b>Duelo de Monstruos</b>. Contando con un gran éxito a nivel mundial, más y más secuelas y spin-offs surgieron, donde cada una nos ofrece una nueva locación, distintos períodos de tiempo, distintos personajes y nuevas cartas. Cada serie sería como un "salto generacional" donde el juego cambia, pero siempre manteniendo sus mecánicas básicas.
-            </p><p>Acompañame a ver la diversa variedad de series de esta franquicia:</p>
+            </p>
             <hr>
-        <section id="series">
+        <div id="series">
             <article id="TOEI" class="c-i">
                 <div class="c-a"><img src="../img/ANIME/1-S0.jpg" class="responsive-img" alt="Poster de YUGIOH por Toei Animation"></div>
                 <div class="c-b">
@@ -107,7 +107,7 @@
                 </div>
                 <div class="c-b"><img src="../img/ANIME/8-SEVENS.jpg" class="responsive-img" alt="Poster de Yugioh SEVENS"></div>
             </article>
-        </section>
+        </div>
     </main>
     <footer>
         <p>Yu-Gi-Oh es propiedad de Konami, todos los derechos reservados a sus respectivos dueños</p>
