--- a/pages/cartas.html
+++ b/pages/cartas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprende YuGiOh!</title>
+    <title>Cartas | Aprende YuGiOh!</title>
     <link href="../styles.css" rel="stylesheet">
     <link rel="icon" href="../img/ico.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,6 @@
             </div>
             <h2>¿En qué consiste?</h2>
             <p>En este juego, dos o más personas (llamadas Duelistas) se enfrentan en un Duelo de Monstruos. En este cada jugador cuenta con un determinado número de cartas de tres diferentes clases: Cartas de Monstruo, Cartas Mágicas y Cartas de Trampa. Cada una tiene características y efectos diferentes (algunas pocas no tienen efecto) que se usan durante el Duelo con el fin de defenderse y derrotar a su adversario. Cada jugador cuenta con 8000 LP (Life Points o Puntos de Vida) y quien queda con 0 LP, o se queda sin cartas, pierde el Duelo.</p>
-            </article>
         </article>
         <hr>
         <article id="basics" class="justify-p">
@@ -67,7 +66,6 @@
                     <br>
                     Veamos los tipos de Cartas que hay presentes en el juego:
                     </p>
-                </div>
             <div class="c-i">
                 <div class="c-a">
                     <h3>Tipos de Cartas</h3>
@@ -76,7 +74,7 @@
                         <br>Un monstruo puede ser invocado normalmente, revelando su nombre, ataque, defensa y demás datos, o puede ser colocado boca abajo sobre el campo. Esto crea un factor de riesgo al atacar un monstruo boca abajo, pues dependiendo de su valor de DEF podrías recibir daño al atacarlo con tu monstruo.</p>
                 </div>
                 <div class="c-b">
-                    <img class="responsive-img" id="blueeyes" src="../img/CARTAS/BLUE EYES.jpg" alt="Ejemplo de Carta de Monstruo">
+                    <img class="responsive-img" id="blueeyes" src="../img/CARTAS/BLUEEYES.jpg" alt="Ejemplo de Carta de Monstruo">
                     <p class="caption">Ejemplo de una carta de monstruo, el Dragón Blanco de Ojos Azules</p>
                 </div>
                 <div class="c-a">
@@ -85,7 +83,7 @@
                     <br>En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</p>
                 </div>
                 <div class="c-b">
-                    <img  class="responsive-img" src="../img/CARTAS/Icono Magia.png" alt="Ícono representativo de las cartas de Magia">
+                    <img  class="responsive-img" src="../img/CARTAS/IconoMagia.png" alt="Ícono representativo de las cartas de Magia">
                     <p class="caption">Ícono de las cartas mágicas</p>
                 </div>
                 <div class="c-a">
@@ -95,7 +93,6 @@
                 <div class="c-b">
                     <img class="responsive-img" src="../img/CARTAS/ICONO.png" alt="Ícono representativo de las cartas de Trampa">
                     <p class="caption">Ícono de las cartas de trampa</p>
-                </div>
                 </div>
             </div>
         </article>
